<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="2dp"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obavestenja_naslov_veliko"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/light_gray"
        android:fontFamily="@font/montserrat_reg"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <!-- Prvo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/comment_background"
            android:padding="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/notif_hour"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/dark_grey"
                android:fontFamily="@font/montserrat_reg"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/notif_event1"
                    android:textSize="14sp"
                    android:textColor="@color/dark_grey"
                    android:fontFamily="@font/montserrat_reg"
                    android:layout_height="wrap_content"
                     android:layout_width="wrap_content"/>
                <TextView
                    android:text="@string/notif_date_event1"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/dark_grey"
                    android:fontFamily="@font/montserrat_reg"
                    android:layout_width="wrap_content"/>
                <TextView
                    android:text="@string/notif_guests1"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/dark_grey"
                    android:fontFamily="@font/montserrat_reg"
                    android:layout_width="wrap_content"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notif_potvrdjeno"
                android:textSize="14sp"
                android:textColor="@color/dark_grey"
                android:fontFamily="@font/montserrat_reg"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!-- Drugo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/comment_background"
            android:padding="16dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/notif_date"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/dark_grey"
                android:fontFamily="@font/montserrat_reg"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/notif_event2"
                    android:textSize="14sp"
                    android:textColor="@color/dark_grey"
                    android:fontFamily="@font/montserrat_reg"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <TextView
                    android:text="@string/notif_date_event2"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/dark_grey"
                    android:fontFamily="@font/montserrat_reg"
                    android:layout_width="wrap_content"/>
                <TextView
                    android:text="@string/notif_guests2"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/dark_grey"
                    android:fontFamily="@font/montserrat_reg"
                    android:layout_width="wrap_content"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/notif_odbijeno"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/dark_grey"
                android:fontFamily="@font/montserrat_reg"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <Button
    android:id="@+id/btnClose"
    style="?android:attr/buttonBarButtonStyle"
    android:layout_width="wrap_content"
    android:layout_marginTop="20dp"
    android:backgroundTint="@color/dark_grey"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:layout_gravity="center"
    android:textColor="@color/white"
    android:textAlignment="center"
    android:fontFamily="@font/montserrat_reg"
    android:minHeight="50dp"
    android:textSize="16sp"
    android:text="@string/zatvori" />
</LinearLayout>