<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/eventImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="20dp"
            android:src="@drawable/ponude_korp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            >
            <TextView
                android:id="@+id/eventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dogadjaj_korpa"
                android:fontFamily="@font/montserrat_reg"
                android:textColor="@color/dark_grey"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:paddingTop="4dp" />

            <TextView
                android:id="@+id/eventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/datum_korpa"
                android:fontFamily="@font/montserrat_reg"
                android:textColor="@color/light_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/eventGuests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/gosti_korpa"
                android:fontFamily="@font/montserrat_reg"
                android:textColor="@color/light_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/eventPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_reg"
                android:textColor="@color/light_gray"
                android:text="@string/cena_korpa"
                android:textSize="14sp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ukloni"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_reg"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/dark_grey"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/potvrdi"
            android:fontFamily="@font/montserrat_reg"
            android:backgroundTint="@color/dark_grey"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>
